[package]
name = "deranged"
version = "0.1.0"
edition = "2021"

[lib]
name = "deranged"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dlopen = "0.1.0"
chrono = "0.3.0"
libc = "0.2.139"
lazy_static = "1.4.0"
